--- a/src/components/Searchbar/Searchbar.module.css
+++ b/src/components/Searchbar/Searchbar.module.css
@@ -1,4 +1,3 @@
-
 .Searchbar {
   top: 0;
   left: 0;
@@ -29,15 +28,15 @@
 
 .SearchForm-button {
   display: inline-block;
-  width: 48px;
+  width: 60px;
   height: 48px;
   border: 0;
-  background-image: url('https://image.flaticon.com/icons/svg/149/149852.svg');
-  background-size: 40%;
+  /* background-image: url('https://image.flaticon.com/icons/svg/149/149852.svg'); */
+  /* background-size: 40%;
   background-repeat: no-repeat;
   background-position: center;
   opacity: 0.6;
-  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1); */
   cursor: pointer;
   outline: none;
 }
@@ -47,7 +46,7 @@
 }
 
 .SearchForm-button-label {
-  position: absolute;
+  /* position: absolute;
   width: 1px;
   height: 1px;
   padding: 0;
@@ -55,7 +54,8 @@
   clip: rect(0, 0, 0, 0);
   white-space: nowrap;
   clip-path: inset(50%);
-  border: 0;
+  border: 0; */
+  color: black;
 }
 
 .SearchForm-input {
